# fileIndexer3

./: .gitignore  README.md  meaninglessBenchmarks  xtime.rb
cppIndexer/: Makefile  cppIndexer.sublime-workspace  cppfi  cppfi.cpp  fileFinder.cpp  fileFinder.h  fileIndexer.cpp  fileIndexer.h  ncppfi.h  sQueue.h
goIndexer/: ssfi.go
rust_ssfi/: Cargo.toml
rust_ssfi/src/: lib.rs  main.rs
rust_ssfi/tests/: lib.rs
rust_ssfi_spsc/: Cargo.toml
rust_ssfi_spsc/src/: lib.rs  main.rs
