[package]
name = "ssfi_spmc"
version = "1.0.1"
authors = ["Christopher Edelmaier <christopher.edelmaier@gmail.com>"]

[dependencies]
regex = "*"
regex_macros = "*"
getopts = "*"

[dependencies.comm]
git = "https://github.com/mahkoh/comm"

[dependencies.concurrent-hashmap]
git = "https://github.com/cedelmaier/rust-concurrent-hashmap"
